# descartes-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __init__.py  bench.py  coverage.py
descartes/: __init__.py  grounding.py  loop.py  operators.py  panel.py  render.py  server.py
docs/: index.html
docs/assets/: README.md
examples/: claude_code_mcp_config.json  pretool_hook.md  sample_doubt_log.json
tests/: conftest.py  helpers.py  test_benchmark.py  test_coverage.py  test_grounding.py  test_loop.py  test_operators.py  test_panel.py  test_recursion.py  test_regressions.py  test_server.py  test_visual.py
